--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,11 @@
-.App {
-  text-align: center;
+.canvas-container .main-canvas {
+  pointer-events: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.canvas-container:hover .main-canvas {
+  opacity: 0.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.canvas-container:not(:hover) .photo-controller {
+  display: none;
 }
