--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ label {
 .btn-help-modal {
   color: #666;
   font-size: 12px;
+  padding: 0 0 10px 0;
 }
 .modal-help .modal-title {
   font-size: 1rem;
