--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ label {
   border-color: #e1147f;
   font-weight: bold;
 }
-.btn-primary:hover, .btn-outline-primary:not(:disabled):not(.disabled):active {
+.btn-primary:hover, .btn-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled):active {
   background-color: #cc1273;
   border-color: #cc1273;
 }
